--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>关于 | CXBlog</title>
+<title>关于 | QYBlog</title>
 <meta name="keywords" content="">
 <meta name="description" content="本网站原本是为了「村新晚报」工程（原名「“朝花夕拾”每日杂记」工程）而作，后来也被用来发布其他文章。
 如果需要进行查找可以去“标签”页面点击相关标签进行筛选。
@@ -93,7 +93,7 @@ Made by qjwh
         font-family: 'Ubuntu';
     }
 </style><meta property="og:url" content="https://qjwh.github.io/boyuanqy/about/">
-  <meta property="og:site_name" content="CXBlog">
+  <meta property="og:site_name" content="QYBlog">
   <meta property="og:title" content="关于">
   <meta property="og:description" content="本网站原本是为了「村新晚报」工程（原名「“朝花夕拾”每日杂记」工程）而作，后来也被用来发布其他文章。
 如果需要进行查找可以去“标签”页面点击相关标签进行筛选。
@@ -139,7 +139,7 @@ Made by qjwh
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://qjwh.github.io/boyuanqy/" accesskey="h" title="CXBlog (Alt + H)">CXBlog</a>
+            <a href="https://qjwh.github.io/boyuanqy/" accesskey="h" title="QYBlog (Alt + H)">QYBlog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -208,7 +208,7 @@ Made by qjwh
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://qjwh.github.io/boyuanqy/">CXBlog</a></span> · 
+        <span>&copy; 2025 <a href="https://qjwh.github.io/boyuanqy/">QYBlog</a></span> · 
 
     <span>
         Powered by
