--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>CXBlog</title>
+<title>QYBlog</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -87,19 +87,19 @@
         font-family: 'Ubuntu';
     }
 </style><meta property="og:url" content="https://qjwh.github.io/boyuanqy/">
-  <meta property="og:site_name" content="CXBlog">
-  <meta property="og:title" content="CXBlog">
+  <meta property="og:site_name" content="QYBlog">
+  <meta property="og:title" content="QYBlog">
   <meta property="og:locale" content="zh">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="CXBlog">
+<meta name="twitter:title" content="QYBlog">
 <meta name="twitter:description" content="">
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "CXBlog",
+  "name": "QYBlog",
   "url": "https://qjwh.github.io/boyuanqy/",
   "description": "",
   "logo": "https://qjwh.github.io/boyuanqy/favicon.ico",
@@ -125,7 +125,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://qjwh.github.io/boyuanqy/" accesskey="h" title="CXBlog (Alt + H)">CXBlog</a>
+            <a href="https://qjwh.github.io/boyuanqy/" accesskey="h" title="QYBlog (Alt + H)">QYBlog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -194,7 +194,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://qjwh.github.io/boyuanqy/">CXBlog</a></span> · 
+        <span>&copy; 2025 <a href="https://qjwh.github.io/boyuanqy/">QYBlog</a></span> · 
 
     <span>
         Powered by
