--- a/index.html
+++ b/index.html
@@ -178,13 +178,23 @@
         <img draggable="false" src="https://qjwh.github.io/boyuanqy/favicon.jpg" alt="ProfileMode image" title="ProfileMode image"
             height="150" width="150" />
         <h1>QYBlog</h1>
-        <span>BoyuanQY Recorder</span><div class="social-icons" >
+        <span>初来请点下面“关于”按钮查看帮助</span><div class="social-icons" >
 </div>
 
         <div class="buttons">
             <a class="button" href="about" rel="noopener" title="关于">
                 <span class="button-inner">
                     关于
+                </span>
+            </a>
+            <a class="button" href="posts/plb/plb07" rel="noopener" title="梦回繁华：美好回忆录">
+                <span class="button-inner">
+                    梦回繁华：美好回忆录
+                </span>
+            </a>
+            <a class="button" href="posts/cxep/2025g8b006" rel="noopener" title="20250222村新晚报">
+                <span class="button-inner">
+                    20250222村新晚报
                 </span>
             </a>
         </div>
