--- a/index.html
+++ b/index.html
@@ -192,9 +192,14 @@
                     梦回繁华：美好回忆录
                 </span>
             </a>
-            <a class="button" href="posts/cxep/2025g8b006" rel="noopener" title="20250222村新晚报">
+            <a class="button" href="posts/cxep/2025g8b006" rel="noopener" title="最新村新晚报">
                 <span class="button-inner">
-                    20250222村新晚报
+                    最新村新晚报
+                </span>
+            </a>
+            <a class="button" href="tags/%E6%9D%91%E6%96%B0%E6%99%9A%E6%8A%A5" rel="noopener" title="往期村新晚报">
+                <span class="button-inner">
+                    往期村新晚报
                 </span>
             </a>
         </div>
