--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                     往期村新晚报
                 </span>
             </a>
+            <a class="button" href="posts/play/florr_upds" rel="noopener" title="florr.io更新快报">
+                <span class="button-inner">
+                    florr.io更新快报
+                </span>
+            </a>
         </div>
     </div>
 </div>
