--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,11 @@
 “标签”页面：用于查找一个类型的文章，点击相关标签即可进行筛选。
 “搜索”页面：根据标题或内容在所有文章内查找。
 
+解释一下一些文章名称的意思：
+
+村新晚报：简称CXEP（CunXin Evening Papers），用于说一些班级时事和我的一些“日记”（当然，是可以公开的那些）。
+florr：关于florr.io游戏的一些内容。
+
 另外，因为技术原因，我不打算添加评论系统，如有问题请通过给我发邮件的方式进行联系，请标清楚自己的姓名否则不予受理。
 Made by qjwh
 @2025/2/22">
@@ -101,7 +106,8 @@ Made by qjwh
   <meta property="og:description" content="QYBlog是在CXBlog下的为博远QY班专门建立的独立博客。
 本网站原本是为了「村新晚报」工程（原名「“朝花夕拾”每日杂记」工程）而作，后来也被用来发布其他文章。
 在上面的菜单内有“文章”“列表”“标签”“搜索”四个选项：
-“文章”页面：可以查看文章（每页10个），以及文章开头的内容预览。 “列表”页面：可以用列表方式查看所有文章 “标签”页面：用于查找一个类型的文章，点击相关标签即可进行筛选。 “搜索”页面：根据标题或内容在所有文章内查找。 另外，因为技术原因，我不打算添加评论系统，如有问题请通过给我发邮件的方式进行联系，请标清楚自己的姓名否则不予受理。
+“文章”页面：可以查看文章（每页10个），以及文章开头的内容预览。 “列表”页面：可以用列表方式查看所有文章 “标签”页面：用于查找一个类型的文章，点击相关标签即可进行筛选。 “搜索”页面：根据标题或内容在所有文章内查找。 解释一下一些文章名称的意思：
+村新晚报：简称CXEP（CunXin Evening Papers），用于说一些班级时事和我的一些“日记”（当然，是可以公开的那些）。 florr：关于florr.io游戏的一些内容。 另外，因为技术原因，我不打算添加评论系统，如有问题请通过给我发邮件的方式进行联系，请标清楚自己的姓名否则不予受理。
 Made by qjwh
 @2025/2/22">
   <meta property="og:locale" content="zh">
@@ -204,6 +210,11 @@ Made by qjwh
 <li>“列表”页面：可以用列表方式查看所有文章</li>
 <li>“标签”页面：用于查找一个类型的文章，点击相关标签即可进行筛选。</li>
 <li>“搜索”页面：根据标题或内容在所有文章内查找。</li>
+</ul>
+<p>解释一下一些文章名称的意思：</p>
+<ul>
+<li>村新晚报：简称CXEP（CunXin Evening Papers），用于说一些班级时事和我的一些“日记”（当然，是可以公开的那些）。</li>
+<li>florr：关于florr.io游戏的一些内容。</li>
 </ul>
 <p>另外，因为技术原因，我不打算添加评论系统，如有问题请通过<a href="mailto:3055198305@qq.com">给我发邮件</a>的方式进行联系，请标清楚自己的姓名否则不予受理。</p>
 <p>Made by qjwh</p>
