--- a/about/index.html
+++ b/about/index.html
@@ -22,6 +22,12 @@
 florr：关于florr.io游戏的一些内容。
 
 另外，因为技术原因，我不打算添加评论系统，如有问题请通过给我发邮件的方式进行联系，请标清楚自己的姓名否则不予受理。
+置顶公告：
+
+村新晚报降频公告
+注意！这些行为会导致你被通报批评
+提问系统今天开始实行！
+
 Made by qjwh
 @2025/2/22">
 <meta name="author" content="">
@@ -108,7 +114,8 @@ Made by qjwh
 在上面的菜单内有“文章”“列表”“标签”“搜索”四个选项：
 “文章”页面：可以查看文章（每页10个），以及文章开头的内容预览。 “列表”页面：可以用列表方式查看所有文章 “标签”页面：用于查找一个类型的文章，点击相关标签即可进行筛选。 “搜索”页面：根据标题或内容在所有文章内查找。 解释一下一些文章名称的意思：
 村新晚报：简称CXEP（CunXin Evening Papers），用于说一些班级时事和我的一些“日记”（当然，是可以公开的那些）。 florr：关于florr.io游戏的一些内容。 另外，因为技术原因，我不打算添加评论系统，如有问题请通过给我发邮件的方式进行联系，请标清楚自己的姓名否则不予受理。
-Made by qjwh
+置顶公告：
+村新晚报降频公告 注意！这些行为会导致你被通报批评 提问系统今天开始实行！ Made by qjwh
 @2025/2/22">
   <meta property="og:locale" content="zh">
   <meta property="og:type" content="website">
@@ -217,6 +224,12 @@ Made by qjwh
 <li>florr：关于florr.io游戏的一些内容。</li>
 </ul>
 <p>另外，因为技术原因，我不打算添加评论系统，如有问题请通过<a href="mailto:3055198305@qq.com">给我发邮件</a>的方式进行联系，请标清楚自己的姓名否则不予受理。</p>
+<p><strong>置顶公告：</strong></p>
+<ul>
+<li><a href="https://qjwh.github.io/boyuanqy/posts/cxep/2025g8b005/#%e6%9d%91%e6%96%b0%e6%99%9a%e6%8a%a5%e9%99%8d%e9%a2%91%e5%85%ac%e5%91%8a">村新晚报降频公告</a></li>
+<li><a href="https://qjwh.github.io/boyuanqy/posts/cxep/2025g8b006/#%E6%B3%A8%E6%84%8F%E8%BF%99%E4%BA%9B%E8%A1%8C%E4%B8%BA%E4%BC%9A%E5%AF%BC%E8%87%B4%E4%BD%A0%E8%A2%AB%E9%80%9A%E6%8A%A5%E6%89%B9%E8%AF%84">注意！这些行为会导致你被通报批评</a></li>
+<li><a href="https://qjwh.github.io/boyuanqy/posts/cxep/2025g8b008/#%E6%8F%90%E9%97%AE%E7%B3%BB%E7%BB%9F%E4%BB%8A%E5%A4%A9%E5%BC%80%E5%A7%8B%E5%AE%9E%E8%A1%8C">提问系统今天开始实行！</a></li>
+</ul>
 <p>Made by qjwh</p>
 <p>@2025/2/22</p>
 
