--- a/index.html
+++ b/index.html
@@ -178,33 +178,13 @@
         <img draggable="false" src="https://qjwh.github.io/boyuanqy/favicon.jpg" alt="ProfileMode image" title="ProfileMode image"
             height="150" width="150" />
         <h1>QYBlog</h1>
-        <span>初来请点下面“关于”按钮查看帮助</span><div class="social-icons" >
+        <span>因当前域名可能泄露，域名已经迁移，请线下找我问新的域名</span><div class="social-icons" >
 </div>
 
         <div class="buttons">
             <a class="button" href="about" rel="noopener" title="关于">
                 <span class="button-inner">
                     关于
-                </span>
-            </a>
-            <a class="button" href="posts/plb/plb07" rel="noopener" title="梦回繁华：美好回忆录">
-                <span class="button-inner">
-                    梦回繁华：美好回忆录
-                </span>
-            </a>
-            <a class="button" href="posts/cxep/2025g8b009" rel="noopener" title="最新村新晚报">
-                <span class="button-inner">
-                    最新村新晚报
-                </span>
-            </a>
-            <a class="button" href="tags/%E6%9D%91%E6%96%B0%E6%99%9A%E6%8A%A5" rel="noopener" title="往期村新晚报">
-                <span class="button-inner">
-                    往期村新晚报
-                </span>
-            </a>
-            <a class="button" href="posts/play/florr_upds" rel="noopener" title="florr.io更新快报">
-                <span class="button-inner">
-                    florr.io更新快报
                 </span>
             </a>
         </div>
